Configured the Tomcat server and updated the README.md. Still to do is setting up Postgres, Tomcat connectivity, and updating docs

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -30,7 +30,7 @@
     </dependencies>
 
     <build>
-        <finalName>services</finalName>
+        <finalName>kushanpatelcmu</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
