--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,31 @@
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
     </properties>
 
+    <repositories>
+        <!--<repository>-->
+            <!--<id>sonatype-snapshots</id>-->
+            <!--<url>https://oss.sonatype.org/content/repositories/snapshots/</url>-->
+        <!--</repository>-->
+        <repository>
+            <id>maven2-snapshots</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+        <!--<repository>-->
+            <!--<id>apache-m2-snapshot</id>-->
+            <!--<name>Apache Snapshot Repository</name>-->
+            <!--<url>https://repository.apache.org/content/groups/snapshots</url>-->
+        <!--</repository>-->
+    </repositories>
+
+
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>javax</groupId>
-                <artifactId>javaee-api</artifactId>
-                <version>8.0</version>
-                <scope>provided</scope>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>javax</groupId>-->
+                <!--<artifactId>javaee-api</artifactId>-->
+                <!--<version>8.0</version>-->
+                <!--<scope>provided</scope>-->
+            <!--</dependency>-->
 
             <dependency>
                 <groupId>com.typesafe</groupId>
