--- a/web/pom.xml
+++ b/web/pom.xml
@@ -16,6 +16,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
             <version>2.0.1</version>
@@ -30,7 +37,7 @@
     </dependencies>
 
     <build>
-        <finalName>kushanpatelcmu</finalName>
+        <finalName>kush</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
