Created Get path to find customer by ID

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          metadata-complete="false"
          version="2.5">
 
-    <display-name>OG Kush</display-name>
+    <display-name>Kushan Patel CMU</display-name>
 
 </web-app>
 
